table bg colour and line-height on input to prevent small misalignment

--- a/html/sites/all/themes/custom/ocha_basic/sass/pocam-custom/_home.scss
+++ b/html/sites/all/themes/custom/ocha_basic/sass/pocam-custom/_home.scss
@@ -51,6 +51,7 @@
     font-weight: 300;
     color: #4A4A4A;
     height: 40px;
+    line-height: 40px;
 
     &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
       color: #4A4A4A;
